--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "web": "webpack serve --config ./web/webpack.config.js --mode development --port",
+    "web": "webpack serve --config ./web/webpack.config.js --mode development --port 8085",
     "lint": "eslint .",
     "clean": "react-native-clean-project",
     "test": "jest"
@@ -43,8 +43,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.19.4",
-    "react-navigation": "^4.4.4",
-    "webpack": "^5.85.1"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -67,7 +66,8 @@
     "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4",
-    "webpack-cli": "^5.1.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.0"
   },
   "jest": {
