--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bam.tech/react-native-image-resizer": "^3.0.7",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/blur": "^4.4.0",
+    "@react-native-community/image-editor": "^3.2.0",
+    "@react-native-community/netinfo": "^11.3.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/app-check": "^18.6.2",
     "@react-native-firebase/auth": "^18.6.2",
     "@react-native-firebase/firestore": "^18.6.2",
     "@react-native-firebase/messaging": "^18.6.1",
+    "@react-native-firebase/storage": "^18.7.3",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "apisauce": "^3.0.1",
+    "grapheme-splitter": "^1.0.4",
     "i": "^0.3.7",
     "libphonenumber-js": "^1.10.53",
     "metro": "^0.76.7",
@@ -32,7 +38,9 @@
     "react-native": "^0.72.0",
     "react-native-crypto-js": "^1.0.0",
     "react-native-device-info": "^10.12.0",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gradle-plugin": "^0.71.19",
+    "react-native-image-picker": "^7.1.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "^6.2.2",
     "react-native-popup-menu": "^0.16.1",
